--- a/.github/workflows/reusable-generate-version-number.yml
+++ b/.github/workflows/reusable-generate-version-number.yml
@@ -30,8 +30,7 @@ jobs:
       - name: Get the latest tag
         id: get_latest_tag
         run: |
-          latest_tag=$(git describe --tags --abbrev=0)
-          current_version=${latest_tag#v}
+          current_version=$(git describe --tags --abbrev=0)
           echo "current_version=${current_version}" >> $GITHUB_OUTPUT
 
       - name: Get release type prefix
@@ -49,7 +48,7 @@ jobs:
         run: |
           latest_version=${{ steps.get_latest_tag.outputs.current_version }}
           echo "Current version is ${latest_version}"
-          IFS='.' read -r major minor patch <<< "$latest_version"
+          IFS='.' read -r major minor patch <<< "${latest_version#v}"
 
           case "${{ inputs.release_type }}" in
             "Major")
