--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
     with:
       release_type: ${{ github.event.inputs.release_type }}
 
-  test_it:
+  test_version_number:
     runs-on: ubuntu-latest
     needs: generate_version_number
     steps:
@@ -26,3 +26,18 @@ jobs:
         run: |
           echo "Current version: ${{ needs.generate_version_number.outputs.current_version }}"
           echo "New version: ${{ needs.generate_version_number.outputs.new_version }}"
+
+  create_release_branch:
+    needs: generate_version_number
+    uses: ./.github/workflows/reusable-create-release-branch.yml
+    with:
+      release_type: ${{ github.event.inputs.release_type }}
+      new_version: ${{ needs.generate_version_number.outputs.new_version }}
+
+  test_create_release_branch:
+    runs-on: ubuntu-latest
+    needs: create_release_branch
+    steps:
+      - name: Output the release branch
+        run: |
+          echo "Release branch: ${{ needs.create_release_branch.outputs.branch_name }}"
