--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,7 @@ jobs:
     uses: ./.github/workflows/reusable-generate-version-number.yml
     with:
       release_type: ${{ github.event.inputs.release_type }}
+    secrets: inherit
 
   test_version_number:
     runs-on: ubuntu-latest
@@ -33,6 +34,7 @@ jobs:
     with:
       release_type: ${{ github.event.inputs.release_type }}
       new_version: ${{ needs.generate_version_number.outputs.new_version }}
+    secrets: inherit
 
   test_create_release_branch:
     runs-on: ubuntu-latest
