--- a/.github/workflows/reusable-create-release-branch.yml
+++ b/.github/workflows/reusable-create-release-branch.yml
@@ -61,6 +61,9 @@ jobs:
       - name: Create Branch
         id: create_branch
         run: |
+          branch_name=${{ env.branch_prefix }}/${{ inputs.new_version }}
+          echo "branch_name=${branch_name}" >> $GITHUB_OUTPUT
+
           base_branch="develop"
 
           if [ "${{ inputs.release_type }}" = "Patch" ]; then
