--- a/.github/workflows/reusable-update-release-artifacts.yml
+++ b/.github/workflows/reusable-update-release-artifacts.yml
@@ -35,6 +35,17 @@ jobs:
           # owner: "ownername"
           repositories: "workflows"
 
+      - name: Get GitHub App User ID
+        id: get_user_id
+        run: echo "user-id=$(gh api "/users/${{ steps.generate_token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
+        env:
+          GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
+
+      - name: Set up Git
+        run: |
+          git config --global user.name '${{ steps.generate_token.outputs.app-slug }}[bot]'
+          git config --global user.email '${{ steps.get_user_id.outputs.user-id }}+${{ steps.generate_token.outputs.app-slug }}[bot]@users.noreply.github.com>'
+
       - name: Update CHANGELOG
         run: |
           # Define Unreleased section template
