--- a/.github/workflows/reusable-update-release-artifacts.yml
+++ b/.github/workflows/reusable-update-release-artifacts.yml
@@ -46,6 +46,10 @@ jobs:
           git config --global user.name '${{ steps.generate_token.outputs.app-slug }}[bot]'
           git config --global user.email '${{ steps.get_user_id.outputs.user-id }}+${{ steps.generate_token.outputs.app-slug }}[bot]@users.noreply.github.com>'
 
+      - name: Checkout Release Branch
+        run: |
+          git checkout ${{ inputs.branch_name }}
+
       - name: Update CHANGELOG
         run: |
           # Define Unreleased section template
