--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,15 +19,6 @@ jobs:
       release_type: ${{ github.event.inputs.release_type }}
     secrets: inherit
 
-  test_version_number:
-    runs-on: ubuntu-latest
-    needs: generate_version_number
-    steps:
-      - name: Output the versions
-        run: |
-          echo "Current version: ${{ needs.generate_version_number.outputs.current_version }}"
-          echo "New version: ${{ needs.generate_version_number.outputs.new_version }}"
-
   create_release_branch:
     needs: generate_version_number
     uses: ./.github/workflows/reusable-create-release-branch.yml
@@ -35,14 +26,6 @@ jobs:
       release_type: ${{ github.event.inputs.release_type }}
       new_version: ${{ needs.generate_version_number.outputs.new_version }}
     secrets: inherit
-
-  test_create_release_branch:
-    runs-on: ubuntu-latest
-    needs: create_release_branch
-    steps:
-      - name: Output the release branch
-        run: |
-          echo "Release branch: ${{ needs.create_release_branch.outputs.branch_name }}"
 
   update_release_artifacts:
     needs: [generate_version_number, create_release_branch]
@@ -52,3 +35,21 @@ jobs:
       current_version: ${{ needs.generate_version_number.outputs.current_version }}
       branch_name: ${{ needs.create_release_branch.outputs.branch_name }}
     secrets: inherit
+
+  create_production_release_pull_request:
+    needs: [generate_version_number, create_release_branch]
+    uses: ./.github/workflows/reusable-create-pull-request.yml
+    with:
+      base: main
+      head: ${{ needs.create_release_branch.outputs.branch_name }}
+      body: "Pull request for ${{ github.event.inputs.release_type }} release ${{ needs.generate_version_number.outputs.new_version }}."
+      title: "Release ${{ needs.generate_version_number.outputs.new_version }}"
+    secrets: inherit
+
+  test_prod_pr:
+    runs-on: ubuntu-latest
+    needs: create_production_release_pull_request
+    steps:
+      - name: Output the PR URL
+        run: |
+          echo "Release branch: ${{ needs.create_production_release_pull_request.outputs.pull_request_url }}"
