--- a/.github/workflows/reusable-create-pull-request.yml
+++ b/.github/workflows/reusable-create-pull-request.yml
@@ -28,7 +28,7 @@ jobs:
   create_pull_request:
     runs-on: ubuntu-latest
     outputs:
-      pull_request_url: ${{ steps.get_latest_tag.outputs.current_version }}
+      pull_request_url: ${{ steps.create_pull_request.outputs.pull_request_url }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -46,6 +46,7 @@ jobs:
           repositories: "workflows"
 
       - name: Create pull request
+        id: create_pull_request
         run: |
           pull_request_url=$(gh pr create \
             --base ${{ inputs.base }} \
