--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,10 +46,15 @@ jobs:
       title: "Release ${{ needs.generate_version_number.outputs.new_version }}"
     secrets: inherit
 
-  test_prod_pr:
+  manual_approval:
+    environment: "Production"
     runs-on: ubuntu-latest
     needs: create_production_release_pull_request
     steps:
-      - name: Output the PR URL
-        run: |
-          echo "Release branch: ${{ needs.create_production_release_pull_request.outputs.pull_request_url }}"
+      - run: echo "Approved to Prod"
+
+  post_approval:
+    runs-on: ubuntu-latest
+    needs: manual_approval
+    steps:
+      - run: echo "Woohoo!"
