--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,3 +61,9 @@ jobs:
     environment: "Production"
     steps:
       - run: echo "Approved to Prod"
+
+  what_it_do:
+    runs-on: ubuntu-latest
+    needs: manual_approval
+    steps:
+      - run: echo "what this do"
