--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,5 +65,6 @@ jobs:
   what_it_do:
     runs-on: ubuntu-latest
     needs: manual_approval
+    if: ${{ always() }}
     steps:
       - run: echo "what this do"
