--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,6 +65,6 @@ jobs:
   what_it_do:
     runs-on: ubuntu-latest
     needs: manual_approval
-    if: ${{ contains(fromJSON('["success", "skipped"]'), needs.manual_approval.result) }}
+    if: ${{ needs.manual_approval.result == 'success' || needs.manual_approval.result == 'skipped' }}
     steps:
       - run: echo "what this do"
