--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,9 +16,9 @@ on:
         required: true
         type: choice
         options:
-          - false
-          - true
-        default: false
+          - No
+          - Yes
+        default: No
 
 jobs:
   generate_version_number:
@@ -58,7 +58,7 @@ jobs:
   manual_approval:
     runs-on: ubuntu-latest
     needs: create_production_release_pull_request
-    if: ${{ inputs.needs_manual_approval == 'true' || inputs.release_type == 'Patch' }}
+    if: ${{ inputs.needs_manual_approval == 'Yes' || inputs.release_type == 'Patch' }}
     environment: "Production"
     steps:
       - run: |
