--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,3 +95,4 @@ jobs:
     secrets: inherit
     with:
       pull_request_url: ${{ needs.create_pull_request_main_to_develop.outputs.pull_request_url }}
+      delete_branch_after_merge: "No"
