--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,18 +64,6 @@ jobs:
         run: |
           echo "Approved to Prod"
 
-      - name: Rejected - Delete Release Branch
-        if: failure()
-        run: |
-          echo "Release rejected..."
-          echo "Deleting release branch..."
-
-      - name: Rejected - Close Pull Request
-        if: failure()
-        run: |
-          echo "Release rejected..."
-          echo "Closing pull request..."
-
   merge_production_release_pull_request_to_main:
     needs: [create_production_release_pull_request_to_main, manual_approval]
     if: ${{ always() && (needs.manual_approval.result == 'success' || needs.manual_approval.result == 'skipped') }}
@@ -110,3 +98,18 @@ jobs:
     with:
       pull_request_url: ${{ needs.create_pull_request_main_to_develop.outputs.pull_request_url }}
       delete_branch_after_merge: "No"
+
+  rejected_release_cleaup:
+    runs-on: ubuntu-latest
+    needs: manual_approval
+    if: ${{ needs.manual_approval.result == 'failure' }}
+    steps:
+      - name: Rejected - Delete Release Branch
+        run: |
+          echo "Release rejected..."
+          echo "Deleting release branch..."
+
+      - name: Rejected - Close Pull Request
+        run: |
+          echo "Release rejected..."
+          echo "Closing pull request..."
