--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -102,7 +102,7 @@ jobs:
   rejected_release_cleaup:
     runs-on: ubuntu-latest
     needs: manual_approval
-    if: ${{ needs.manual_approval.result == 'failure' }}
+    if: ${{ always() && needs.manual_approval.result == 'failure' }}
     steps:
       - name: Rejected - Delete Release Branch
         run: |
