--- a/.github/workflows/reusable-pull-request-create.yml
+++ b/.github/workflows/reusable-pull-request-create.yml
@@ -25,7 +25,7 @@ on:
         value: ${{ jobs.create_pull_request.outputs.pull_request_url }}
 
 jobs:
-  create_pull_request:
+  pull_request_create:
     runs-on: ubuntu-latest
     outputs:
       pull_request_url: ${{ steps.create_pull_request.outputs.pull_request_url }}
