--- a/.github/workflows/reusable-pull-request-close.yml
+++ b/.github/workflows/reusable-pull-request-close.yml
@@ -45,4 +45,4 @@ jobs:
 
           eval "$close_command"
         env:
-          GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
+          GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
