--- a/.github/workflows/reusable-create-release.yml
+++ b/.github/workflows/reusable-create-release.yml
@@ -9,7 +9,7 @@ on:
         type: string
 
 jobs:
-  create_pull_request:
+  create_release:
     runs-on: ubuntu-latest
     steps:
       - name: Generate a token
