--- a/.github/workflows/reusable-update-release-artifacts.yml
+++ b/.github/workflows/reusable-update-release-artifacts.yml
@@ -3,10 +3,6 @@ name: Update Release Artifacts
 on:
   workflow_call:
     inputs:
-      branch_name:
-        description: "The name of the created release/hotfix branch."
-        required: true
-        type: string
       new_version:
         description: "The new version number based on the release type"
         required: true
@@ -20,6 +16,13 @@ jobs:
   update_release_artifacts:
     runs-on: ubuntu-latest
     steps:
+      - name: Create Branch
+        id: create_branch
+        uses: ./.github/workflows/reusable-create-branch.yml
+        with:
+          base_branch: "develop"
+          branch_name: "update_artifacts_for_release_${{ inputs.new_version }}"
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -46,9 +49,9 @@ jobs:
           git config --global user.name '${{ steps.generate_token.outputs.app-slug }}[bot]'
           git config --global user.email '${{ steps.get_user_id.outputs.user-id }}+${{ steps.generate_token.outputs.app-slug }}[bot]@users.noreply.github.com>'
 
-      - name: Checkout Release Branch
+      - name: Checkout Branch
         run: |
-          git checkout ${{ inputs.branch_name }}
+          git checkout ${{ steps.create_branch.outputs.branch_name }}
 
       - name: Update CHANGELOG
         run: |
@@ -106,7 +109,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
           FILE_TO_COMMIT: CHANGELOG.md
-          DESTINATION_BRANCH: ${{ inputs.branch_name }}
+          DESTINATION_BRANCH: ${{ steps.create_branch.outputs.branch_name }}
 
       - name: Commit changes to dbt_project.yml
         run: |
@@ -122,4 +125,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
           FILE_TO_COMMIT: dbt_project.yml
-          DESTINATION_BRANCH: ${{ inputs.branch_name }}
+          DESTINATION_BRANCH: ${{ steps.create_branch.outputs.branch_name }}
+
+      - name: Create Branch
+        id: create_branch
+        uses: ./.github/workflows/reusable-create-branch.yml
+        with:
+          base_branch: "develop"
+          branch_name: "update_artifacts_for_release_${{ inputs.new_version }}"
